--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   width: 8px;
   height: 8px;
   border-radius: 100px;
-  background: yellow;
-  top: -4px;
-  right: -4px;
+  background: green;
+  top: 0px;
+  right: 0px;
 }
